--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
       <div class="row pb-3">
         <div class="col-lg-4 mb-4">
           <div class="card border-0 mb-2">
-            <img class="card-img-top" src="../img/blog-1.jpg" alt="" />
+            <img class="card-img-top" src="./img/blog-1.jpg" alt="" />
             <div class="card-body bg-light p-4">
               <h4 class="card-title text-truncate">Diam amet eos at no eos</h4>
               <div class="d-flex mb-3">
@@ -855,7 +855,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card border-0 mb-2">
-            <img class="card-img-top" src="../img/blog-2.jpg" alt="" />
+            <img class="card-img-top" src="./img/blog-2.jpg" alt="" />
             <div class="card-body bg-light p-4">
               <h4 class="card-title text-truncate">Diam amet eos at no eos</h4>
               <div class="d-flex mb-3">
@@ -879,7 +879,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card border-0 mb-2">
-            <img class="card-img-top" src="../img/blog-3.jpg" alt="" />
+            <img class="card-img-top" src="./img/blog-3.jpg" alt="" />
             <div class="card-body bg-light p-4">
               <h4 class="card-title text-truncate">Diam amet eos at no eos</h4>
               <div class="d-flex mb-3">
